tests/incremental_path/incremental_path.exp

Should resolve to dir/node_modules/b.js which is number
Error ----------------------------------------------------------------------------------------------------- dir/a.js:2:2

Cannot cast `require(...)` to boolean because number [1] is incompatible with boolean [2]. [incompatible-cast]

   dir/a.js:2:2
   2| (require('b'): boolean);
       ^^^^^^^^^^^^

References:
   dir/node_modules/b.js:2:18
   2| module.exports = 0;
                       ^ [1]
   dir/a.js:2:16
   2| (require('b'): boolean);
                     ^^^^^^^ [2]



Found 1 error

Should resolve to node_modules/b.js which is a string
Error ----------------------------------------------------------------------------------------------------- dir/a.js:2:2

Cannot cast `require(...)` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   dir/a.js:2:2
   2| (require('b'): boolean);
       ^^^^^^^^^^^^

References:
   node_modules/b.js:2:18
   2| module.exports = "";
                       ^^ [1]
   dir/a.js:2:16
   2| (require('b'): boolean);
                     ^^^^^^^ [2]



Found 1 error

Should resolve to dir/node_modules/b.js which is number
Error ----------------------------------------------------------------------------------------------------- dir/a.js:2:2

Cannot cast `require(...)` to boolean because number [1] is incompatible with boolean [2]. [incompatible-cast]

   dir/a.js:2:2
   2| (require('b'): boolean);
       ^^^^^^^^^^^^

References:
   dir/node_modules/b.js:2:18
   2| module.exports = 0;
                       ^ [1]
   dir/a.js:2:16
   2| (require('b'): boolean);
                     ^^^^^^^ [2]



Found 1 error
